# improved-aesthetic-predictor

./: .gitignore  MANIFEST.in  predict_sample.py  pyproject.toml  requirements.txt  setup.bat  setup.py
aesthetic_predictor/: aesthetic_predictor.py
env_imp_aesthetic/: pyvenv.cfg
env_imp_aesthetic/Scripts/: activate  activate.bat  get_objgraph  undill
scripts/: predict_sample.py
src/aesthetic_predictor/: __init__.py  aesthetic_predictor.py  version.py
