[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools_scm"]

[project]
name = "aesthetic-predictor"
authors = [
  {name = "christophschuhmann", email = "christoph_s@freenet.de"},
  {name = "minamikik", email = "mia@sync.dev"},
]
description = "Predict the aesthetic score of an image"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.10",
]
requires-python = "==3.10.*"
dependencies = [
    "torch",
    "numpy",
    "Pillow",
    "pytorch_lightning",
    "requests",
    "clip @ git+https://github.com/openai/CLIP"
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest"
]

[project.urls]
Source = "https://github.com/minamikik/improved-aesthetic-predictor"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "aesthetic_predictor.version.version"}

[tool.setuptools_scm]
write_to = "src/aesthetic_predictor/version.py"
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"
